# NanoHermes

./: .gitignore  .wiki-schema.md  AGENTS.md  CLAUDE.md  README.md  TESTING_GUIDE.md  mcp_servers.example.json  nanohermes.example.json  nanohermes.example.minimal.json  nanohermes.json  package.json  pdf2md.py  pyproject.toml  quick_sort.md  quick_sort.py  test_api.py  test_automated.py  test_core_e2e.py  test_plan_and_report.md  test_pty_e2e.py  test_report.md  test_user_simulation.py  tsconfig.json
articles/: Agent Skills 终极指南.md  Claude Workflows Harness设计.md  Claude 多智能体编排全解.md  INDEX.md  Loop Engineering 概念解析与实践.md  Loop-Engineering实践指南.md  agentic-rl-survey.md  article_loop_engine.md  claude-code-subagent-mechanism.md  knowledge-base-rag-guide.md  loop-cross-session-self-evolution.md  loop-engineering-ai-agent.md  loop-engineering-evolution.md  openclaw-hermes-analysis.md  superpowers-complete-analysis.md  一文看懂Loop-Engineering.md  一文看懂MCP.md  一文讲透-Tool-Calling为什么它是大模型从Chatbot-走向-Agent-的关键跃迁.md  万字长文讲透Transformer-20个核心概念全解析.md  从Vibe Coding到Harness 一套大仓AI工程化实战.md  基于顶级Agent的Harness工程搭建式业务Agent评测方案.md  如何写好Skill终极指南.md  意识-Loop让-Loop-跨-Session-自进化的最佳实践.md  网易有道CEO周枫一张图七个要点读懂Harness思维.md
articles/agent-evaluation-system/: analysis-nanohermes.md  article-raw.md  images.json
articles/ai-agent-framework/: Superpowers完整解析从源码到设计哲学.md  (+12 more)
docs/: TUI_GUIDE.md  TUI_V2_GUIDE.md
skills/: .skills_prompt_snapshot.json
src/: __init__.py  __main__.py  main.py  sdk.py
tests/: test_concurrent.py  test_e2e.py  test_jsonl_store.py  test_main_integration.py  test_todo_e2e_real.py
(+649 files in other folders)
