[project]
name = "nanohermes"
version = "0.1.0"
description = "Self-evolving AI Agent system"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.60.0,<2",
    "anthropic>=0.45.0,<1",
    "better-sqlite3>=0.2.0,<1",
    "pyyaml>=6.0,<7",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
